# chrome-search-engine-importer

./: README.md  chrome-search-engine-importer.py  example_search_engines.yml  pyproject.toml  requirements.txt
.github/workflows/: pypi-release.yml  pypi-test-release.yml
src/chrome-search-engine-importer/: __main__.py
